@@ -1,5 +1,12 @@
 2006-03-01  Randolph Chung  <tausq@debian.org>
 
+	* hppa-tdep.h (unwind_table_entry): Update field names to match HP
+	runtime specification.
+	* hppa-tdep.c (internalize_unwinds, hppa_frame_cache): Likewise.
+	(unwind_command): Likewise.
+
+2006-03-01  Randolph Chung  <tausq@debian.org>
+
 	* hppa-tdep.c (hppa_frame_cache): Handle Region_Description and
 	Pseudo_SP_Set in unwind record.
 
